use Modernizr to fix issues with the fixed top and bottom navbar on mobile devices when the keyboard is displayed.

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -154,3 +154,20 @@ a.desc:after {
     text-align: center;
     vertical-align: middle !important;
 }
+
+
+.fixfixed .navbar-fixed-top, 
+.fixfixed .navbar-fixed-bottom { 
+    position: absolute;
+    visibility: hidden;
+} 
+
+/* Override Bootstrap Responsive CSS fixed navbar */
+@media (max-width: 979px) {
+  .navbar-fixed-top,
+  .navbar-fixed-bottom {
+      position: fixed;
+      margin-left: 0px;
+      margin-right: 0px;
+  }
+}
